Fixed navbar display
Fixed navbar display so everything is in a line instead of overlapping onto two lines.

--- a/foundation-5.5.2/css/portfolio-theme.css
+++ b/foundation-5.5.2/css/portfolio-theme.css
@@ -82,8 +82,12 @@ body {
 	}
 }
 
-.about, .work, .contact {
+.about, .work {
 	padding: 50px 0 0 0;
+}
+
+.contact {
+	padding: 50px 0 25px 0;
 }
 
 .contact a {
